2002-01-24  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-sh.c (sh_elf_suffix): Removed.
	(sh_PIC_related_p, sh_check_fixup, sh_cons_fix_new,
	sh_end_of_match, sh_parse_name): New functions.
	(sh_elf_cons): Simplify.
	(parse_exp): Reject misplaced PIC operands.
	(md_undefined_symbol): Simplify.
	(sh_fix_adjustable): Let @GOTOFF be adjusted.
	(md_apply_fix3): Write @PLT and @GOTOFF addends in place.
	(tc_gen_reloc): Move fixp subsy absolute value into addnumber.
	Complain if subsy remains at the end.
	* config/tc-sh.h (sh_parse_name, sh_cons_fix_new): Declare.
	(md_parse_name, TC_CONS_FIX_NEW, O_PIC_reloc): Define.

2002-01-22  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mn10300.c (xr_registers): Move `pc'...
	(other_registers): ... here.

2002-01-21  DJ Delorie  <dj@redhat.com>

	* config/obj-coff.c (obj_coff_init_stab_section): Make the
	stabstr_name allocation permanent, as it will be referenced from
	the section hash.

2002-01-21  Jason Thorpe  <thorpej@wasabisystems.com>

	* configure.in (ia64-*-netbsd*): New target.
	* configure: Regenerate. 

2002-01-21  Hans-Peter Nilsson  <hp@bitrange.com>

	* doc/as.texinfo (Overview) <Target ARM options>: Add missing {}
	to @dots call.
	<Detailed description, ARM options>: Ditto.
	* doc/c-arm.texi (ARM Options): Ditto.

2002-01-18  Richard Earnshaw  <rearnsha@arm.com>

	* tc-arm.c (do_xsc_mia, do_xsc_mar, do_xsc_mra): Renamed from
	do_mia, do_mar and do_mra respectively.
	(do_mav_*): Renamed from do_c_*.
	(mav_reg_required_here, mav_parse_offset): Renamed from
	cirrus_reg_required_here and cirrus_parse_offset respectively.
	(MAV_MODE?): Renamed from CIRRUS_MODE?.

2002-01-18  Richard Earnshaw  <rearnsha@arm.com>
	    Keith Walker  <keith.walker@arm.com>

	* tc-arm.c (ARM_EXT_V5J, ARM_ARCH_V5TEJ): Define.
	(insns): Add pattern for bxj instruction.
	(do_bxj): New function.
	(arm_cpus): Add arm926ej.
	(arm_archs): Add armv5tej.

2002-01-18  Richard Earnshaw  <rearnsha@arm.com>
